--- a/SneakerInside/Views/Catalog/Index.cshtml
+++ b/SneakerInside/Views/Catalog/Index.cshtml
@@ -11,9 +11,6 @@
         <h3 class="card-title">Danh sách hãng giày</h3>
     </div>
     <div class="card-body">
-        <p>
-            <a asp-action="Create">Thêm mới</a>
-        </p>
         <table id="CatalogTable" class="table table-bordered table-hover">
             <thead>
                 <tr>
@@ -26,10 +23,12 @@
                     <th>
                         @Html.DisplayNameFor(model => model.Status)
                     </th>
-                    <th></th>
+                    <th style="text-align: center">
+                        <a class="btn btn-success btn-sm" href="@Url.Action("Create","Catalog")"><i class="fa fa-plus-square"></i></a>
+                    </th>
                 </tr>
             </thead>
-            @*<tbody>
+            <tbody>
                 @foreach (var item in Model)
                 {
                     <tr>
@@ -40,16 +39,24 @@
                             @Html.DisplayFor(modelItem => item.CatalogName)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Status)
+                            @if (item.Status == 1)
+                            {
+                                <p>Hoạt động</p>
+                            }
+                            else
+                            {
+                                <p>Không hoạt động</p>
+                            }
                         </td>
-                        <td>
-                            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                        <td style="text-align: center">
+                            <a class="btn btn-warning btn-sm" href="@Url.Action("Edit", "Catalog" ,new { id = item.CatalogID})"><i class="fa fa-edit"></i></a>
+                            <button type="button" class="btn btn-danger btn-sm btn_delete" data-toggle="modal" data-target="#deleteModal">
+                                <i class="fa fa-trash"></i>
+                            </button>
                         </td>
                     </tr>
                 }
-            </tbody>*@
+            </tbody>
         </table>
     </div>
 </div>
@@ -58,27 +65,6 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('#CatalogTable').DataTable({
-                "processing": true,
-                "serverSide": true,
-                "filter": true,
-                "ajax": {
-                    "url": "@Url.Action("Index", "Catalog")",
-                    "type": "GET",
-                    "datatype": "json"
-                },
-                "columnDefs": [{
-                    "targets": [0],
-                    "visible": false,
-                    "searchable": false
-                }],
-                "columns": [
-                    { "data": "CatalogID", "autoWidth": true },
-                    { "data": "CatalogName", "autoWidth": true },
-                    { "data": "Status", "autoWidth": true },
-                    {
-                        "render": function (data, row) { return "<a href='#' class='btn btn-danger' onclick=DeleteCustomer('" + row.id + "'); >Delete</a>"; }
-                    },
-                ]
             });
         });
     </script>
