--- a/SneakerInside/Views/Catalog/Edit.cshtml
+++ b/SneakerInside/Views/Catalog/Edit.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit" method="post">
+        <form asp-action="Edit">
             <div class="form-group">
                 <input type="hidden" asp-for="CatalogID" class="form-control"/>
             </div>
