--- a/SneakerInside/Views/Catalog/Create.cshtml
+++ b/SneakerInside/Views/Catalog/Create.cshtml
@@ -5,26 +5,26 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>Catalog</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="col-md-6">
+    <div class="card card-success">
+        <div class="card-header">
+            <h3 class="card-title">Thêm mới @ViewBag.Name</h3>
+        </div>
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CatalogName" class="control-label"></label>
-                <input asp-for="CatalogName" class="form-control" />
-                <span asp-validation-for="CatalogName" class="text-danger"></span>
+            <div class="card-body">
+                <div class="form-group">
+                    <label asp-for="CatalogName" class="control-label"></label>
+                    <input asp-for="CatalogName" class="form-control" />
+                    <span asp-validation-for="CatalogName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Status" class="control-label"></label>
+                    <select asp-for="Status" class="form-control" asp-items="@ViewBag.status"></select>
+                    <span asp-validation-for="Status" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control" asp-items="@ViewBag.status"></select>
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="card-footer">
+                <input type="submit" value="Thêm mới" class="btn btn-success" />
             </div>
         </form>
     </div>
