Inside - SubCatalog: hoàn thành

--- a/SneakerInside/Views/Shared/_Layout.cshtml
+++ b/SneakerInside/Views/Shared/_Layout.cshtml
@@ -68,15 +68,15 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="@Url.Action("Index", "Catalog")" class="nav-link">
+                                    <a asp-action="Index" asp-controller="Catalog" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Hãng giày</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="pages/charts/flot.html" class="nav-link">
+                                    <a asp-action="Index" asp-controller="SubCatalog" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Flot</p>
+                                        <p>Loại giày</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
