--- a/SneakerInside/Views/Catalog/Index.cshtml
+++ b/SneakerInside/Views/Catalog/Index.cshtml
@@ -7,7 +7,6 @@
     //ListCatalog = ViewBag.ListCatalog;
 }
 
-<!-- Input addon -->
 <div class="card card-info">
     <div class="card-header">
         <h3 class="card-title">Danh sách @ViewBag.Name</h3>
@@ -66,11 +65,11 @@
 
 @section Scripts{ 
     <script type="text/javascript">
-        $(document).ready(function () {
-            $('#catalogTable').dataTable({
+        //$(document).ready(function () {
+        //    $('#catalogTable').dataTable({
 
-            });
-        });
+        //    });
+        //});
 
         @*$(document).ready(function () {
             var data = [];
