--- a/SneakerInside/Views/ImageProduct/Edit.cshtml
+++ b/SneakerInside/Views/ImageProduct/Edit.cshtml
@@ -28,7 +28,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="ProductID" class="control-label"></label>
-                    <input asp-for="ProductID" class="form-control" />
+                    <select asp-for="ProductID" class="form-control" asp-items="@ViewBag.dropDownProduct"></select>
                     <span asp-validation-for="ProductID" class="text-danger"></span>
                 </div>
             </div>
