--- a/SneakerInside/Views/Product/Create.cshtml
+++ b/SneakerInside/Views/Product/Create.cshtml
@@ -34,12 +34,12 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="CatalogID" class="control-label"></label>
-                    <input asp-for="CatalogID" class="form-control" />
+                    <select asp-for="CatalogID" class="form-control" asp-items="@ViewBag.dropDownCatalog"></select>
                     <span asp-validation-for="CatalogID" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="SubCatalogID" class="control-label"></label>
-                    <input asp-for="SubCatalogID" class="form-control" />
+                    <select asp-for="SubCatalogID" class="form-control" asp-items="@ViewBag.dropDownSubCatalog"></select>
                     <span asp-validation-for="SubCatalogID" class="text-danger"></span>
                 </div>
             </div>
