update page payment

--- a/SneakerOutside/Views/Shared/_Layout.cshtml
+++ b/SneakerOutside/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/css/slide.css" />
     <link rel="stylesheet" href="~/css/list_products.css" />
     <link rel="stylesheet" href="~/css/produc_detail.css" />
+    <link rel="stylesheet" href="~/css/payment.css" />
     <link rel="stylesheet" href="~/css/style.css" />
 </head>
 <body>
