--- a/SneakerInside/Views/OrderDetail/Index.cshtml
+++ b/SneakerInside/Views/OrderDetail/Index.cshtml
@@ -38,7 +38,7 @@
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Image)
+                            <img src="@("~/Images/" + item.Image)" asp-append-version="true" width="300" />
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.ProductName)
