--- a/SneakerInside/Views/Catalog/Index.cshtml
+++ b/SneakerInside/Views/Catalog/Index.cshtml
@@ -25,7 +25,9 @@
                         @Html.DisplayNameFor(model => model.Status)
                     </th>
                     <th style="text-align: center">
-                        <a onclick="createCatalog('@Url.Action("Create","Catalog")', 'Thêm mới @ViewBag.Name')" class="btn btn-success"><i class="fas fa-plus"></i></a>
+                        <a onclick="showCatalogModal('@Url.Action("Create","Catalog",null,Context.Request.Scheme)', 'Thêm mới danh mục',)" class="btn btn-success">
+                            <i class="fas fa-plus"></i>
+                        </a>
                     </th>
                 </tr>
             </thead>
@@ -61,17 +63,15 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="formModal">
-    <div class="modal-dialog">
+<div class="modal" tabindex="-1" role="dialog" id="catalogModal">
+    <div class="modal-dialog" role="document">
         <div class="modal-content">
-
             <div class="modal-header">
                 <h5 class="modal-title"></h5>
-                <button type="button" class="close" data-dismiss="modal">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-
             <div class="modal-body">
 
             </div>
@@ -100,37 +100,81 @@
                     {
                         data: null,
                         render: function (data, type, row) {
-                            return '<button id="' + row.catalogID +'" type="button" class="btn btn-danger getID" data-toggle="modal" data-target="#deleteModal"><i class="fas fa-trash-alt"></i></button>';
+                            return '<button id="' + row.catalogID + '" type="button" class="btn btn-danger getID" data-toggle="modal" data-target="#deleteModal"><i class="fas fa-trash-alt"></i></button>';
                         }
                     }
                 ]
             });
-
-            var id = 0;
-            $('#catalogTable').on('click', 'button.getID', function () {
-                var id = $(this).attr('id');
-            });
-
-
-            $('body').on('click','#href_delete',function () {
-                $.ajax({
-                    url: '/Catalog/Delete/' + id
-                });
-            });
-            debugger
         });
 
-        createCatalog = (url, title) => {
+        showCatalogModal = (url, title) => {
             $.ajax({
                 type: "GET",
                 url: url,
                 success: function (res) {
-                    $("#formModal .modal-body").html(res);
-                    $("#formModal .modal-title").html(title);
-                    $("#formModal").modal('show');
+                    $("#catalogModal .modal-body").html(res);
+                    $("#catalogModal .modal-title").html(title);
+                    $("#catalogModal").modal('show');
                 }
             })
         }
 
+        createCatalog = form => {
+            try {
+                $.ajax({
+                    type: "POST",
+                    url: form.action,
+                    data: new FormData(form),
+                    contentType: false,
+                    processData: false,
+                    success: function (res) {
+                        if (res.isValid) {
+                            $("#catalogModal .modal-body").html('');
+                            $("#catalogModal .modal-title").html('');
+                            $("#catalogModal").modal('hide');
+                        }
+                        else {
+                            $("#catalogModal .modal-body").html(res.html);
+                        }
+                    },
+                    error: function (err) {
+                        console.log(err);
+                    }
+                })
+            }
+            catch (e) {
+                console.log(e);
+            }
+            return false;
+        }
+
+        //function createCatalog() {
+        //    $.ajax({
+        //        type: "GET",
+        //        url: "/Catalog/Create",
+        //        success: function (res) {
+        //            $("#catalogModalBody").html(res);
+        //            $("#catalogModal").modal('show');
+        //        }
+        //    })
+        //}
+
+        //function create() {
+        //    var modal = $("catalogModal");
+        //    var form = $('form[name="catalogForm"]');
+        //    $.ajax({
+        //        type: "POST",
+        //        url: "/Catalog/Create",
+        //        data: form.serialize(),
+        //        success: function (res) {
+        //            if (res) {
+        //                modal.modal('hide');
+        //            }
+        //        },
+        //        error: function (err) {
+        //            console.log(err);
+        //        }
+        //    })
+        //}
     </script>
 }
