--- a/SneakerInside/Views/Catalog/Create.cshtml
+++ b/SneakerInside/Views/Catalog/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = null;
 }
 
-<form asp-action="Create" onsubmit="return createCatalog(this);" autocomplete="off">
+<form asp-action="Create" onsubmit="return create(this);" autocomplete="off">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="CatalogName" class="control-label"></label>
